12/10/12 move DragHandler to easel-phet
12/10/12 rename templates/ -> html/
12/10/12 rename app/ -> js/
12/10/12 rename faraday.html -> index.html
12/10/12 rename faraday-config.js -> config.js
12/10/12 rename faraday-main.js -> main.js
12/8/12 rename faraday-html to faraday
12/8/12 standardize format of requirejs "imports"
12/8/12 oldValue=null on initial notification of Property
12/8/12 add notification-on-registration to Property, modify use sites
12/6/12 make Options button larger
12/6/12 hide the "Options" button when pressed, show when popup closes
12/4/12 fix bug in alpha computation for b-field visualization
12/4/12 tune compass kinematics for dipole model
12/4/12 implement dipole model for bar magnet (ported from DipoleMagnet.java, circa 7/16/2010)
12/4/12 add Vector2D.plus and rotate
12/4/12 add Point2D.distance
# 0.00.01 (70955) Dec 4, 2012
12/4/12 change canvas size and Option button placement to look better on ipad
12/3/12 add some more space below strength slider
12/3/12 specify options panel title by id instead of class in css
12/3/12 consolidate a bit of css
12/3/12 move Options button up a bit, so that it's covered by overlay popup
12/3/12 use <fieldset data-role="controlgroup"> for grouping some check boxes
12/3/12 SR fix: address error caused by setting initial slider value (see last line of WidgetConnector.connectSliderToProperty)
12/3/12 SR fix: remove css workaround for "#strengthSliderDiv .ui-slider-handle"
12/3/12 SR fix: layout of options panel header
12/3/12 SR fix: slider is not being rewritten by jqm
12/3/12 add workaround for jquery.mobile bug that was preventing slider rewrite (thanks SR!)
12/3/12 i18n of title in options panel
12/3/12 encapsulate wiring of DOM ui-components to javascript in WidgetConnector
12/3/12 remove unnecessary div's from options panel template
12/3/12 use a single jquery selector when wiring up check boxes
12/3/12 wire up check boxes using jquery selectors
12/3/12 size the Options panel after modifying the DOM